...
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

      <view
          class="android.support.v7.widget.SearchView$SearchAutoComplete"
          android:id="@+id/search_src_text"
          android:layout_height="@dimen/search_src_text_height"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:minWidth="@dimen/abc_search_view_text_min_width"
          android:layout_gravity="bottom"
          android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
...
